<resources>
    <string name="app_name">GeoReminder</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="georeminder">GeoReminder</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="no_reminder">No reminder</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_routine">Add routine</string>
    <string name="add_geolocation_reminder">Add Geolocation reminder</string>
    <string name="add_deadline_button">add_deadline_button</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="text">Text</string>
    <string name="time">Time</string>
    <string name="cencel_button">cencel button</string>
    <string name="validate_button">Validate button</string>
    <string name="address">Address</string>
    <string name="reminders">Reminders</string>
    <string name="georeminders">GeoReminders</string>
    <string name="routines">Routines</string>
    <string name="logout">SignOut</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="corentin_le_gall">Corentin LE GALL</string>
</resources>
