<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/display_constaint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2121212">

    <LinearLayout
        android:id="@+id/display_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/display_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#121212"
            android:editable="false"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/tertiary_text_light"
            android:textColorHint="#54FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <LinearLayout
            android:id="@+id/display_dt_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#121212">

            <EditText
                android:id="@+id/display_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/time"
                android:importantForAutofill="no"
                android:inputType="time"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@android:color/tertiary_text_light"
                android:textColorHint="#54FFFFFF" />

            <EditText
                android:id="@+id/display_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@android:color/tertiary_text_light"
                android:textColorHint="#54FFFFFF" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <EditText
            android:id="@+id/display_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#121212"
            android:editable="false"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:scrollbars="vertical"
            android:selectAllOnFocus="false"
            android:textColor="@android:color/tertiary_text_light"
            android:textColorHint="#54FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <ImageButton
            android:id="@+id/display_validate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#121212"
            android:clickable="true"
            android:contentDescription="@string/validate_button"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_edit"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>