<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routine_constaint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#73121212">

    <LinearLayout
        android:id="@+id/routine_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/routine_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#121212"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@android:color/tertiary_text_light"
            android:textColorHint="#54FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <LinearLayout
            android:id="@+id/dt_constraint_routine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#121212">

            <CheckBox
                android:id="@+id/daily_routine_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Daily"
                android:textColor="@android:color/tertiary_text_light" />

            <CheckBox
                android:id="@+id/weekly_routine_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Weekly"
                android:textColor="@android:color/tertiary_text_light" />

            <CheckBox
                android:id="@+id/monthly_routine_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Monthly"
                android:textColor="@android:color/tertiary_text_light" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <EditText
            android:id="@+id/routine_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:background="#121212"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:scrollbars="vertical"
            android:selectAllOnFocus="false"
            android:textColor="@android:color/tertiary_text_light"
            android:textColorHint="#54FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <LinearLayout
            android:id="@+id/vc_constraint_routine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#121212">

            <ImageButton
                android:id="@+id/validate_button_routine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#121212"
                android:clickable="true"
                android:contentDescription="@string/validate_button"
                android:focusable="true"
                android:src="@android:drawable/ic_menu_edit"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/cancel_button_routine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#121212"
                android:clickable="true"
                android:contentDescription="@string/cencel_button"
                android:focusable="true"
                android:keepScreenOn="false"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>